[gd_scene load_steps=17 format=3 uid="uid://oqvmhj448jw1"]

[ext_resource type="Script" path="res://scenes/menu/bg_computer.gd" id="1_cvqja"]
[ext_resource type="FontFile" uid="uid://nd0j0ma6nfnv" path="res://fonts/Xolonium-Regular.ttf" id="2_f7nu3"]
[ext_resource type="Texture2D" uid="uid://o55i7g1jd7dg" path="res://art/pc_table.png" id="2_q0w0p"]
[ext_resource type="Texture2D" uid="uid://chfapkccr01ee" path="res://art/pc_podstavka.png" id="3_md55y"]
[ext_resource type="Texture2D" uid="uid://dlgglqtgii35t" path="res://art/winXP.jpg" id="4_odkfi"]
[ext_resource type="Texture2D" uid="uid://cvd1c2j508rdq" path="res://art/winXP_explorer.png" id="4_psq7f"]
[ext_resource type="Texture2D" uid="uid://c0xdve3cqdkfh" path="res://art/start_icon.png" id="8_g0f2l"]
[ext_resource type="Texture2D" uid="uid://s3qm64nw5b1a" path="res://art/quit_icon.png" id="9_cyuq4"]
[ext_resource type="Texture2D" uid="uid://b7bm78g4n208m" path="res://art/settings_icon.png" id="9_tmoj0"]
[ext_resource type="Texture2D" uid="uid://cc24nu74invel" path="res://art/winXP_welcome.png" id="10_br37c"]
[ext_resource type="Texture2D" uid="uid://3fp4w208c68i" path="res://art/btn_play.png" id="11_8redo"]
[ext_resource type="Texture2D" uid="uid://cyknq6wnkw6l0" path="res://art/btn_close.png" id="12_ucu4a"]
[ext_resource type="Texture2D" uid="uid://buwndfqon0l10" path="res://art/pc_frame.png" id="13_t7214"]

[sub_resource type="Animation" id="Animation_tfnhf"]
resource_name = "shut_down"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShutDownBg:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_py783"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShutDownBg:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_npeki"]
_data = {
"RESET": SubResource("Animation_py783"),
"shut_down": SubResource("Animation_tfnhf")
}

[node name="BGComputer" type="ParallaxBackground"]
script = ExtResource("1_cvqja")
is_intro_finished = true

[node name="ParallaxLayer4" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.55, 0.55)

[node name="BGColor" type="ColorRect" parent="ParallaxLayer4"]
offset_left = -83.0
offset_top = -175.0
offset_right = 1455.0
offset_bottom = 838.0
color = Color(0.346095, 0.252203, 0.303869, 1)

[node name="ParallaxLayer3" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.7, 0.7)

[node name="PCTable" type="Sprite2D" parent="ParallaxLayer3"]
position = Vector2(557, 683)
scale = Vector2(0.42, 0.42)
texture = ExtResource("2_q0w0p")

[node name="PCPodstavka" type="Sprite2D" parent="ParallaxLayer3"]
position = Vector2(584, 561)
scale = Vector2(0.241319, 0.241319)
texture = ExtResource("3_md55y")

[node name="ParallaxLayer2_Start" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.85, 0.85)

[node name="PCScreen" type="Sprite2D" parent="ParallaxLayer2_Start"]
position = Vector2(627.919, 241.5)
scale = Vector2(0.342624, 0.360185)
texture = ExtResource("4_psq7f")

[node name="Back" type="Button" parent="ParallaxLayer2_Start"]
offset_left = 576.0
offset_top = 302.0
offset_right = 773.0
offset_bottom = 355.0
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 36
text = "Назад
"

[node name="Icon1" type="Control" parent="ParallaxLayer2_Start"]
layout_mode = 3
anchors_preset = 0
offset_left = 445.0
offset_top = 177.0
offset_right = 637.0
offset_bottom = 324.0
scale = Vector2(0.6, 0.6)

[node name="Level1" type="TextureButton" parent="ParallaxLayer2_Start/Icon1"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 660.0
offset_bottom = 531.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_g0f2l")

[node name="Label" type="Label" parent="ParallaxLayer2_Start/Icon1"]
layout_mode = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 183.0
offset_bottom = 147.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 30
text = "Ур. 1"
horizontal_alignment = 1

[node name="Icon2" type="Control" parent="ParallaxLayer2_Start"]
layout_mode = 3
anchors_preset = 0
offset_left = 568.75
offset_top = 177.75
offset_right = 760.75
offset_bottom = 324.75
scale = Vector2(0.6, 0.6)

[node name="Level2" type="TextureButton" parent="ParallaxLayer2_Start/Icon2"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 660.0
offset_bottom = 531.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_g0f2l")

[node name="Label" type="Label" parent="ParallaxLayer2_Start/Icon2"]
layout_mode = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 183.0
offset_bottom = 147.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 30
text = "Ур. 2
"
horizontal_alignment = 1

[node name="Icon3" type="Control" parent="ParallaxLayer2_Start"]
layout_mode = 3
anchors_preset = 0
offset_left = 694.312
offset_top = 179.062
offset_right = 886.312
offset_bottom = 326.062
scale = Vector2(0.6, 0.6)

[node name="Level3" type="TextureButton" parent="ParallaxLayer2_Start/Icon3"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 660.0
offset_bottom = 531.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_g0f2l")

[node name="Label" type="Label" parent="ParallaxLayer2_Start/Icon3"]
layout_mode = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 183.0
offset_bottom = 147.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 30
text = "Ур. 3
"
horizontal_alignment = 1

[node name="Icon4" type="Control" parent="ParallaxLayer2_Start"]
layout_mode = 3
anchors_preset = 0
offset_left = 825.9
offset_top = 178.5
offset_right = 1017.9
offset_bottom = 325.5
scale = Vector2(0.6, 0.6)

[node name="Level4" type="TextureButton" parent="ParallaxLayer2_Start/Icon4"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 660.0
offset_bottom = 531.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_g0f2l")

[node name="Label" type="Label" parent="ParallaxLayer2_Start/Icon4"]
layout_mode = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 183.0
offset_bottom = 147.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 30
text = "Ур. 3
"
horizontal_alignment = 1

[node name="ParallaxLayer2_Settings" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.85, 0.85)

[node name="PCScreen" type="Sprite2D" parent="ParallaxLayer2_Settings"]
position = Vector2(627.919, 241.5)
scale = Vector2(0.342624, 0.360185)
texture = ExtResource("4_psq7f")

[node name="Back" type="Button" parent="ParallaxLayer2_Settings"]
offset_left = 576.0
offset_top = 302.0
offset_right = 773.0
offset_bottom = 355.0
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 36
text = "Назад
"

[node name="Label" type="Label" parent="ParallaxLayer2_Settings"]
offset_left = 514.0
offset_top = 188.0
offset_right = 633.0
offset_bottom = 231.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 30
text = "Музыка
"

[node name="MusicVol" type="HSlider" parent="ParallaxLayer2_Settings"]
offset_left = 665.0
offset_top = 176.0
offset_right = 841.0
offset_bottom = 234.0
max_value = 30.0
value = 30.0
rounded = true

[node name="ParallaxLayer2_Main" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.85, 0.85)

[node name="PCScreen" type="Sprite2D" parent="ParallaxLayer2_Main"]
position = Vector2(627.919, 241.5)
scale = Vector2(0.342624, 0.360185)
texture = ExtResource("4_odkfi")

[node name="IconSettings" type="Control" parent="ParallaxLayer2_Main"]
layout_mode = 3
anchors_preset = 0
offset_left = 331.0
offset_top = 70.0
offset_right = 523.0
offset_bottom = 217.0

[node name="Settings" type="TextureButton" parent="ParallaxLayer2_Main/IconSettings"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 660.0
offset_bottom = 531.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("9_tmoj0")

[node name="Label" type="Label" parent="ParallaxLayer2_Main/IconSettings"]
layout_mode = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 195.0
offset_bottom = 147.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 30
text = "Настройки"
horizontal_alignment = 1

[node name="IconStart" type="Control" parent="ParallaxLayer2_Main"]
layout_mode = 3
anchors_preset = 0
offset_left = 537.0
offset_top = 69.0
offset_right = 729.0
offset_bottom = 216.0

[node name="Start" type="TextureButton" parent="ParallaxLayer2_Main/IconStart"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 660.0
offset_bottom = 531.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_g0f2l")

[node name="Label" type="Label" parent="ParallaxLayer2_Main/IconStart"]
layout_mode = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 183.0
offset_bottom = 147.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 30
text = "В игру
"
horizontal_alignment = 1

[node name="IconQuit" type="Control" parent="ParallaxLayer2_Main"]
layout_mode = 3
anchors_preset = 0
offset_left = 731.0
offset_top = 69.0
offset_right = 923.0
offset_bottom = 216.0

[node name="Quit" type="TextureButton" parent="ParallaxLayer2_Main/IconQuit"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 660.0
offset_bottom = 531.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("9_cyuq4")

[node name="Label" type="Label" parent="ParallaxLayer2_Main/IconQuit"]
layout_mode = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 183.0
offset_bottom = 147.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f7nu3")
theme_override_font_sizes/font_size = 30
text = "Выход
"
horizontal_alignment = 1

[node name="WelcomeWindow" type="Control" parent="ParallaxLayer2_Main"]
layout_mode = 3
anchors_preset = 0
offset_left = 304.0
offset_top = 52.0
offset_right = 958.0
offset_bottom = 430.0

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayer2_Main/WelcomeWindow"]
position = Vector2(328, 204)
scale = Vector2(0.228625, 0.228625)
texture = ExtResource("10_br37c")

[node name="Ok" type="TextureButton" parent="ParallaxLayer2_Main/WelcomeWindow"]
layout_mode = 0
offset_left = 264.0
offset_top = 238.0
offset_right = 388.0
offset_bottom = 280.0
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("11_8redo")

[node name="TextureButton" type="TextureButton" parent="ParallaxLayer2_Main/WelcomeWindow"]
layout_mode = 0
offset_left = 508.0
offset_top = 55.0
offset_right = 579.0
offset_bottom = 125.0
scale = Vector2(0.45, 0.45)
texture_normal = ExtResource("12_ucu4a")
ignore_texture_size = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxLayer2_Main"]
libraries = {
"": SubResource("AnimationLibrary_npeki")
}

[node name="ShutDownBg" type="ColorRect" parent="ParallaxLayer2_Main"]
offset_left = 296.0
offset_top = 37.0
offset_right = 958.0
offset_bottom = 430.0
color = Color(0, 0, 0, 1)

[node name="ParallaxLayer1" type="ParallaxLayer" parent="."]
position = Vector2(60, -38)

[node name="PCFrame" type="Sprite2D" parent="ParallaxLayer1"]
position = Vector2(550, 366)
scale = Vector2(0.294745, 0.294745)
texture = ExtResource("13_t7214")

[node name="TimerWelcome" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[connection signal="pressed" from="ParallaxLayer2_Start/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ParallaxLayer2_Start/Icon1/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="ParallaxLayer2_Start/Icon2/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="ParallaxLayer2_Start/Icon3/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="ParallaxLayer2_Start/Icon4/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="ParallaxLayer2_Settings/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="ParallaxLayer2_Settings/MusicVol" to="." method="_on_music_vol_value_changed"]
[connection signal="pressed" from="ParallaxLayer2_Main/IconSettings/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ParallaxLayer2_Main/IconStart/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ParallaxLayer2_Main/IconQuit/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ParallaxLayer2_Main/WelcomeWindow/Ok" to="." method="_on_ok_pressed"]
[connection signal="timeout" from="TimerWelcome" to="." method="_on_timer_welcome_timeout"]
